AArch64: Print the correct native stack if -XX:+PreserveFramePointer when crash

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 19
    • Affects Version/s: 18
    • Component/s: hotspot
    • b08
    • aarch64

      The native stack frames in the hs log on AArch64 are not accurate sometimes. And this problem can be partially solved when PreserveFramePointer is enabled.
      For more details please refer to the GitHub issue.

            Assignee:
            Denghui Dong
            Reporter:
            Denghui Dong
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: